fix: Fix low contrast accessibility issue
Fix a low contrast accessibility issue in the .blog-description element
flagged by the Chrome Lighthouse accessiblity audit

Resolves: N/a
See also: N/a

--- a/blog.css
+++ b/blog.css
@@ -90,7 +90,7 @@ h6, .h6 {
 }
 .blog-description {
   font-size: 20px;
-  color: #999;
+  color: rgb(78, 78, 78);
 }
 
 
